--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -20,28 +20,29 @@ body {
 .qr-card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: hsl(0, 0%, 100%);
-    padding: 0.6rem;
+    padding: 0.7rem;
     width: 14rem;
+    height: 22rem;
     border-radius: 14px;
 }
 
 .qr-card__content {
     text-align: center;
+    margin: 0.4rem;
 }
 
 .qr-card__content h1 {
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: hsl(218, 44%, 22%) ;
     
 }
 
 .qr-card__content p {
     font-weight: 400;
-    font-size: 0.938rem;
+    font-size: 0.8rem;
 }
 
 .qr-card img {
@@ -51,7 +52,10 @@ body {
 
 }
 
-.attribution { font-size: 11px; text-align: center; }
+.attribution { font-size: 11px; text-align: center;     position: absolute;
+    bottom: 1px;
+    right: 1px;
+ }
 .attribution a { color: hsl(228, 45%, 44%); }
 
 
