--- a/ecommerce-product-page-main/public/stylesheets/components/navbar.css
+++ b/ecommerce-product-page-main/public/stylesheets/components/navbar.css
@@ -1,3 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+h1 {
+  font-size: 2em;
+}
 
 /*# sourceMappingURL=navbar.css.map */
