--- a/ecommerce-product-page-main/public/stylesheets/style.css
+++ b/ecommerce-product-page-main/public/stylesheets/style.css
@@ -1,3 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+html, body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  font: "Kumbh Sans", sans-serif;
+}
 
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: absolute;
+  bottom: 1px;
+  right: 1px;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 
 /*# sourceMappingURL=style.css.map */
