--- a/ecommerce-product-page-main/sass/components/navbar.scss
+++ b/ecommerce-product-page-main/sass/components/navbar.scss
@@ -11,6 +11,7 @@ h1 {
     flex-wrap: wrap;
     height:5rem;
     position: relative;
+    border-bottom: 1px solid #E8E7EB;
 
 }
 
@@ -20,14 +21,24 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
 .nav-bar__cart {
     margin-right: 30px;
 }
 
+.nav-bar__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .nav-bar__menu {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 50%;
+    color: base.$neutral-dark-grayish-blue;
+    font-family: base.$font-stack;
 }
