--- a/ecommerce-product-page-main/public/stylesheets/components/navbar.css
+++ b/ecommerce-product-page-main/public/stylesheets/components/navbar.css
@@ -9,7 +9,24 @@ h1 {
   flex-wrap: wrap;
   height: 5rem;
   position: relative;
-  border-bottom: 1px solid #E8E7EB;
+  border-bottom: 1px solid #e8e7eb;
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+.nav-bar .overflow {
+  position: fixed;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+}
+
+.nav-bar .overflow.active {
+  display: block;
+  opacity: 0.7;
 }
 
 .nav-bar__end-items {
@@ -37,7 +54,52 @@ h1 {
   align-items: center;
   width: 50%;
   color: hsl(219, 9%, 45%);
-  font-family: "Kumbh Sans", sans-serif;
+}
+
+.nav-bar__menu-item {
+  cursor: pointer;
+}
+
+.nav-bar__menu-item:hover {
+  color: #17191c;
+}
+
+.nav-bar__menu_mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+}
+
+.nav-bar__full_menu_mobile {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  position: fixed;
+  height: 100vh;
+  width: 55%;
+  background-color: white;
+  left: -70%;
+  transition: 1s;
+  z-index: 200;
+}
+
+.nav-bar__full_menu_mobile.active {
+  left: 0;
+  transition: 0.6s;
+}
+
+.mobile-menu-items {
+  display: flex;
+  flex-direction: column;
+  padding-top: 2rem;
+  height: 60%;
+}
+
+.mobile-menu-item {
+  margin: 0.5rem;
+  color: hsl(0, 0%, 0%);
+  font-weight: 800;
 }
 
 /*# sourceMappingURL=navbar.css.map */
