--- a/ecommerce-product-page-main/sass/components/navbar.scss
+++ b/ecommerce-product-page-main/sass/components/navbar.scss
@@ -1,44 +1,104 @@
-@use '../base';
+@use "../base";
 
 h1 {
-    font-size: 2em;
-
+  font-size: 2em;
 }
 
 .nav-bar {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    height:5rem;
-    position: relative;
-    border-bottom: 1px solid #E8E7EB;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  height: 5rem;
+  position: relative;
+  border-bottom: 1px solid #e8e7eb;
+  font-family: base.$font-stack;
+}
 
+.nav-bar .overflow {
+  position: fixed;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+}
+
+.nav-bar .overflow.active {
+  display: block;
+  opacity: 0.7;
 }
 
 .nav-bar__end-items {
-    position: absolute;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  position: absolute;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .nav-bar__cart {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .nav-bar__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-bar__menu {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
-    color: base.$neutral-dark-grayish-blue;
-    font-family: base.$font-stack;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+  color: base.$neutral-dark-grayish-blue;
+}
+
+.nav-bar__menu-item {
+  cursor: pointer;
+}
+
+.nav-bar__menu-item:hover {
+  color: darken(base.$neutral-dark-grayish-blue, 35%);
+}
+
+.nav-bar__menu_mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+}
+
+.nav-bar__full_menu_mobile {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  position: fixed;
+  height: 100vh;
+  width: 55%;
+  background-color: white;
+  left: -70%;
+  transition: 1s;
+  z-index: 200;
+}
+
+.nav-bar__full_menu_mobile.active {
+  left: 0;
+  transition: 0.6s;
+}
+
+.mobile-menu-items {
+  display: flex;
+  flex-direction: column;
+  padding-top: 2rem;
+  height: 60%;
+}
+
+.mobile-menu-item {
+  margin: 0.5rem;
+  color: base.$neutral-black;
+  font-weight: 800;
 }
