--- a/ecommerce-product-page-main/sass/components/navbar.scss
+++ b/ecommerce-product-page-main/sass/components/navbar.scss
@@ -40,7 +40,17 @@ h1 {
 }
 
 .nav-bar__cart {
+  position: relative;
   margin-right: 30px;
+}
+
+.nav-bar__cart__popup {
+  position: absolute;
+  height: 50px;
+  width: 70px;
+  left: -50%;
+  bottom: -270%;
+  background-color: red;
 }
 
 .nav-bar__logo {
@@ -58,11 +68,16 @@ h1 {
 }
 
 .nav-bar__menu-item {
+  height: 100%;
+  display: flex;
+  align-items: center;
   cursor: pointer;
+  border-bottom: 3px solid transparent;
 }
 
 .nav-bar__menu-item:hover {
-  color: darken(base.$neutral-dark-grayish-blue, 35%);
+  color: darken(base.$neutral-dark-grayish-blue, 40%);
+  border-bottom: 3px solid base.$primary-orange;
 }
 
 .nav-bar__menu_mobile {
@@ -101,4 +116,15 @@ h1 {
   margin: 0.5rem;
   color: base.$neutral-black;
   font-weight: 800;
+}
+
+.nav-bar__user ::slotted(img:hover) {
+  border: 2px solid base.$primary-orange;
+  border-radius: 50%;
+}
+
+.nav-bar__user ::slotted(img) {
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 50%;
 }
