added popup cart

--- a/ecommerce-product-page-main/sass/components/navbar.scss
+++ b/ecommerce-product-page-main/sass/components/navbar.scss
@@ -46,10 +46,10 @@ h1 {
 
 .nav-bar__cart__popup {
   position: absolute;
-  height: 50px;
-  width: 70px;
-  left: -50%;
-  bottom: -270%;
+  height: 150px;
+  width: 250px;
+  left: -450%;
+  top: 200%;
   background-color: red;
 }
 
